test/integration/bad/function-signatures/stanc.expected
  $ ../../../../../install/default/bin/stanc falling_factorial.stan
Semantic error in 'falling_factorial.stan', line 7, column 26 to column 59:
   -------------------------------------------------
     5:  transformed data {
     6:    real transformed_data_real;
     7:    transformed_data_real = falling_factorial(d_real, r_real);
                                   ^
     8:  }
     9:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'falling_factorial':
(real, real)
Available signatures:
(real, int) => real
  Argument 2 must be int but found real
(real, array[] int) => array[] real
  Argument 2 must be array[] int but found real
(real, array[,] int) => array[,] real
  Argument 2 must be array[,] int but found real
(real, array[,,] int) => array[,,] real
  Argument 2 must be array[,,] int but found real
(real, array[,,,] int) => array[,,,] real
  Argument 2 must be array[,,,] int but found real
(real, array[,,,,] int) => array[,,,,] real
  Argument 2 must be array[,,,,] int but found real
(real, array[,,,,,] int) => array[,,,,,] real
  Argument 2 must be array[,,,,,] int but found real
(real, array[,,,,,,] int) => array[,,,,,,] real
  Argument 2 must be array[,,,,,,] int but found real
(int, array[,,,,,,] int) => array[,,,,,,] int
  Argument 1 must be int but found real
(int, array[,,,,,] int) => array[,,,,,] int
  Argument 1 must be int but found real
(Additional signatures omitted)
  $ ../../../../../install/default/bin/stanc rising_factorial.stan
Semantic error in 'rising_factorial.stan', line 7, column 28 to column 60:
   -------------------------------------------------
     5:  transformed parameters {
     6:    real transformed_param_real;
     7:    transformed_param_real =  rising_factorial(d_real, r_real);
                                     ^
     8:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'rising_factorial':
(real, real)
Available signatures:
(real, int) => real
  Argument 2 must be int but found real
(real, array[] int) => array[] real
  Argument 2 must be array[] int but found real
(real, array[,] int) => array[,] real
  Argument 2 must be array[,] int but found real
(real, array[,,] int) => array[,,] real
  Argument 2 must be array[,,] int but found real
(real, array[,,,] int) => array[,,,] real
  Argument 2 must be array[,,,] int but found real
(real, array[,,,,] int) => array[,,,,] real
  Argument 2 must be array[,,,,] int but found real
(real, array[,,,,,] int) => array[,,,,,] real
  Argument 2 must be array[,,,,,] int but found real
(real, array[,,,,,,] int) => array[,,,,,,] real
  Argument 2 must be array[,,,,,,] int but found real
(int, array[,,,,,,] int) => array[,,,,,,] int
  Argument 1 must be int but found real
(int, array[,,,,,] int) => array[,,,,,] int
  Argument 1 must be int but found real
(Additional signatures omitted)
